--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ alembic = "^1.12.0"
 sqlalchemy = "^2.0.22"
 pydantic-settings = "^2.0.3"
 httpx = "^0.25.0"
+uvicorn = "^0.23.2"
+asyncpg = "^0.28.0"
 
 
 [build-system]
