--- a/alembic.ini
+++ b/alembic.ini
@@ -61,7 +61,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # output_encoding = utf-8
 
 
-sqlalchemy.url = postgresql+asyncpg://postgres:postgres@localhost:5433/postgres?async_fallback=True
+#sqlalchemy.url = postgresql+asyncpg://postgres:postgres@localhost:5433/postgres?async_fallback=True
+sqlalchemy.url = postgresql+asyncpg://postgres:postgres@currency-postgres:5432/postgres?async_fallback=True
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
