--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,22 @@ pydantic-settings = "^2.0.3"
 httpx = "^0.25.0"
 uvicorn = "^0.23.2"
 asyncpg = "^0.28.0"
+black = "^23.10.1"
+isort = "^5.12.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.black]
+line-length = 130
+target-version = ['py310']
+extend-exclude = '''
+.*/migrations/*.
+'''
+
+[tool.isort]
+profile = "black"
+skip_glob = "**/migrations/**"
